--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "npx newman run collection/app.json -e collection/environment.json",
-    "load-test": "node src/index.js"
+    "test": "npx newman run collection/collection.json -e collection/environment.json --bail --reporters cli",
+    "load-test": "node collection/index.js"
   },
   "keywords": [
     "postman",
@@ -22,7 +22,10 @@
     "json-server": "^0.17.0"
   },
   "devDependencies": {
+    "async": "^3.2.2",
     "newman": "^5.3.0",
+    "newman-reporter-html": "^1.0.5",
+    "optimist": "^0.6.1",
     "prompt": "^1.2.0"
   }
 }
